--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 className+=pos;
                 var elementos = document.getElementsByClassName(className);
                 for(var i = 0;i<6;i++){
-                    elementos[i].style.backgroundColor = "dodgerblue";
+                    elementos[i].style.backgroundColor = "navy";
                 }
             }
 
