--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 className+=pos;
                 var elementos = document.getElementsByClassName(className);
                 for(var i = 0;i<6;i++){
-                    elementos[i].style.backgroundColor = "aqua";
+                    elementos[i].style.backgroundColor = "dodgerblue";
                 }  
             }
 
