--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
                 </div>
             </div>
             <div class = "row justify-content-center"> 
-                <button type="button" class="btn btn-primary" onclick="playGame()">empezar</button>
+                <button type="button" class="btn btn-primary" onclick="playGameIa()">empezar contra ia</button>
+                <button type="button" class="btn btn-primary" onclick="playGameJcj()">empezar jcj</button>
             </div>
             <div class = "row justify-content-center" name ="turno"> 
 
