--- a/index.html
+++ b/index.html
@@ -16,15 +16,14 @@
                 </div>
             </div>
             <div class = "row justify-content-center"> 
-                <button type="button" class="btn btn-primary" onclick="playGameIa()">empezar contra ia</button>
-                <button type="button" class="btn btn-primary" onclick="playGameJcj()">empezar jcj</button>
+                <button type="button" class="btn btn-primary" name="botonIniciar" onclick="playGameIa()">empezar contra ia</button>
+                <button type="button" class="btn btn-primary" name="botonIniciar" onclick="playGameJcj()">empezar jcj</button>
             </div>
             <div class = "row justify-content-center" name ="turno"> 
 
             </div>
 
         </div>
-
         <script type="application/javascript" src = "scripts/4_en_raya.js"></script>
         <script type="application/javascript">
             var NUM_FILAS = 6;
