añadida la peticion a la api de github (estrellas)

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <title>4 en Raya</title>
         <meta charset="utf-8">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <link rel = "stylesheet" type="text/css" href = "./styles.css">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
     </head>
@@ -40,7 +41,7 @@ There are many variations of passages of Lorem Ipsum available, but the majority
             <footer>
                 <div class="row bg-dark text-white ">
                     <div class="col-12 p-3 text-center">
-                        <i>Repositorio <a href="https://github.com/Davidram1802/4-en-raya" target="_blank" class="text-white font-weight-bold">aqui</a></i>
+                        <i class="textoFooter">Repositorio <a href="https://github.com/Davidram1802/4-en-raya" target="_blank" class="text-white font-weight-bold">aqui</a></i>
                     </div>
                 </div>
            </footer>
@@ -99,7 +100,17 @@ There are many variations of passages of Lorem Ipsum available, but the majority
         }
         
         </script>
-        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+        <script>
+           $(document).ready(function(){
+                $.getJSON('https://api.github.com/repos/Davidram1802/4-en-raya',function(data){
+                    console.log(data.stargazers_count)
+                    var aux = document.getElementsByClassName('textoFooter')[0].innerHTML
+                    aux += ' (' + data.stargazers_count + ' estrella/s).'
+                    document.getElementsByClassName('textoFooter')[0].innerHTML = aux
+                })
+
+           });
+        </script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
     </body>
